feat: Worked with linear regressions and correlation relationships

--- a/env_pyfi_mac.yml
+++ b/env_pyfi_mac.yml
@@ -1,5 +1,6 @@
 name: pyfi
 channels:
+- anaconda
 - defaults
 dependencies:
 - appnope=0.1.0=py34_0
@@ -48,6 +49,8 @@ dependencies:
 - qt=5.6.2=2
 - qtconsole=4.2.1=py34_1
 - readline=6.2=2
+- requests=2.14.2=py34_0
+- requests-file=1.4.1=py34_0
 - setuptools=27.2.0=py34_0
 - simplegeneric=0.8.1=py34_1
 - sip=4.18=py34_0
@@ -62,6 +65,8 @@ dependencies:
 - widgetsnbextension=1.2.6=py34_0
 - xz=5.2.4=h1de35cc_4
 - zlib=1.2.11=hf3cbc9b_2
+- scikit-learn=0.18.1=np111py34_1
+- scipy=0.18.1=np111py34_1
 - pip:
   - backports-abc==0.5
   - certifi==2018.4.16
@@ -74,8 +79,6 @@ dependencies:
   - lxml==4.2.3
   - pandas-datareader==0.6.0
   - prompt-toolkit==1.0.9
-  - requests==2.19.1
-  - requests-file==1.4.3
   - requests-ftp==0.3.1
   - urllib3==1.23
   - wrapt==1.10.11
